--- a/example/demo.safariextension/manifest.json
+++ b/example/demo.safariextension/manifest.json
@@ -20,5 +20,8 @@
         "page": "views/global.html",
         "persistent": true
     },
-    "permissions": []
+    "permissions": [],
+    "icons": {
+        "16": "images/popup.png"
+    }
 }
