--- a/example/demo.safariextension/package.json
+++ b/example/demo.safariextension/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "xtension Demo",
+  "name": "xtension_demo",
   "version": "0.0.1",
   "description": "Demo Extension for the xtension library",
   "author": "Alexander Oemisch",
   "license": "ISC",
   "dependencies": {
-    "xtension": "0.0.1"
+    "xtension": "*"
   }
 }
